[gd_scene load_steps=3 format=3 uid="uid://c8cadvctsyqpa"]

[ext_resource type="Script" uid="uid://cnul7jv6oyuqa" path="res://src/stages/game/round_game/round_results/matrix_display/point_outcome_grid.gd" id="1_x6635"]
[ext_resource type="PackedScene" uid="uid://ddcekyyc5qtsm" path="res://src/stages/game/round_game/round_results/matrix_display/outcome_panel.tscn" id="2_m076l"]

[node name="PointOutcomeGrid" type="MarginContainer"]
script = ExtResource("1_x6635")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="OutcomeCC" parent="GridContainer" instance=ExtResource("2_m076l")]
unique_name_in_owner = true
layout_mode = 2

[node name="OutcomeDC" parent="GridContainer" instance=ExtResource("2_m076l")]
unique_name_in_owner = true
layout_mode = 2

[node name="OutcomeCD" parent="GridContainer" instance=ExtResource("2_m076l")]
unique_name_in_owner = true
layout_mode = 2

[node name="OutcomeDD" parent="GridContainer" instance=ExtResource("2_m076l")]
unique_name_in_owner = true
layout_mode = 2
